# DialSome

./: .gitignore  .gitmodules  CMakeLists.txt  LoginPage.qml  Main.qml  backend.cpp  backend.h  main.cpp  settings.ini  vercel.json
.github/scripts/: create-release.sh  get-version.sh
.github/workflows/: android-release.yml  build-android.yml  build-docker.yml  release.yml
android/: AndroidManifest.xml  build.gradle  google-services.json  gradle.properties
android/src/com/github/biltudas1/dialsome/: AndroidUtils.java  GoogleLoginManager.java  MyFirebaseMessagingService.java  SecureStorage.java  WebRTCManager.java
api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/core/: lifespan.py  logger.py  settings.py
api/database/: __init__.py  redis.py
api/middlewares/: authenticate.py  google.py
api/models/: fcm.py  token.py  user.py  voice.py
api/routers/: authRouters.py  usersRouter.py  voicecallRouter.py
api/services/: users.py
api/utils/: google_service.py  token.py
api/utils/auth_token/: __init__.py  access_token.py  refresh_token.py
api/utils/jwt/: __init__.py  access_token.py  refresh_token.py
src/: backend.cpp  backend.h  fcmmanager.cpp  fcmmanager.h  utils.cpp  utils.h
src/lib/: apiconstrains.h  apiservice.cpp  apiservice.h  google.cpp  google.h  securestorage.cpp  securestorage.h  settings.cpp  settings.h
ui/: CallingPage.qml  LoginPage.qml  MainPage.qml
