[project]
name = "dialsome"
version = "0.1.0"
description = ""
authors = [
    {name = "Biltu Das",email = "billionto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
]

[tool.poetry]
package-mode = false
