[project]
name = "dialsome"
version = "0.1.0"
description = ""
authors = [
    {name = "Biltu Das",email = "billionto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "google-auth (>=2.48.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tortoise-orm[asyncpg] (>=1.1.5,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "tzdata (>=2025.3,<2026.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[tool.poetry]
package-mode = false
